# clin34-benchmarks

./: .gitignore  Makefile  README.md  pyproject.toml
configs/dbrd/: boreas-7b-chat.yaml  fietje-2b-chat.yaml  fietje-2b-instruct.yaml  fietje-2b.yaml  geitje-7b-ultra.yaml  kwinten-0-5b-instruct.yaml  kwinten-0-5b.yaml  phi-2.yaml  qwen1.5-7b-dutch-chat.yaml  qwen2-0-5b-instruct.yaml  qwen2-0-5b.yaml  qwen2-1-5b-instruct.yaml  qwen2-1-5b.yaml  reynaerde-7b-chat.yaml  tweety-7b.yaml
configs/dutch-cola/: boreas-7b-chat.yaml  fietje-2b-chat.yaml  fietje-2b-instruct.yaml  fietje-2b.yaml  geitje-7b-ultra.yaml  kwinten-0-5b-instruct.yaml  kwinten-0-5b.yaml  phi-2.yaml  qwen1.5-7b-dutch-chat.yaml  qwen2-0-5b-instruct.yaml  qwen2-0-5b.yaml  qwen2-1-5b-instruct.yaml  qwen2-1-5b.yaml  reynaerde-7b-chat.yaml  tweety-7b.yaml
configs/xlwic_wn-nl/: boreas-7b-chat.yaml  fietje-2b-chat.yaml  fietje-2b-instruct.yaml  fietje-2b.yaml  geitje-7b-ultra.yaml  kwinten-0-5b-instruct.yaml  kwinten-0-5b.yaml  phi2.yaml  qwen1.5-7b-dutch-chat.yaml  qwen2-0-5b.yaml  reynaerde-7b-chat.yaml  tweety-7b.yaml
scripts/: aggregate.py  benchmark.py
src/clin34/: benchmarker.py  significance.py
